--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# This file is used to ignore files which are generated
+Все# This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
 *~
