refactor: del extra ';', del trash from .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Все# This file is used to ignore files which are generated
+# This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
 *~
